# proxmox2discord

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml
proxmox2discord/: cli.py  config.py  discord.py  endpoints.py  main.py
proxmox2discord/templates/: log_viewer.html  swagger_ui.html
proxmox_discord_notifier/: cli.py  config.py  discord.py  log_cleanup.py  main.py
proxmox_discord_notifier/schemas/: notify.py
proxmox_discord_notifier/templates/: log_viewer.html
